--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,5 @@ project(os_lb8)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(os_lb8 main.cpp)
+add_executable(os_task45 task4_5.cpp)
+add_executable(os_task6 task6.cpp)
